third_party/move/move-compiler-v2/tests/checking/typing/uninferred_type_call.exp

Diagnostics:
error: unable to infer instantiation of type `_` (consider providing type arguments or annotating the type)
  ┌─ tests/checking/typing/uninferred_type_call.move:3:9
  │
3 │         foo()
  │         ^^^^^
